add flags for manpage/docs build; start enabling docs builds

--- a/configure.in
+++ b/configure.in
@@ -49,11 +49,8 @@ fi
 AC_PATH_PROG(CP, cp, /bin/cp)
 AC_PATH_PROG(MV, mv, /bin/mv)
 AC_PATH_PROG(TAR, tar, /bin/tar)
-AC_PATH_PROG(HELP2MAN, help2man)
-AC_PATH_PROG(MAN2HTML, man2html)
+AC_PATH_PROG(PERL, perl)
 
-AM_CONDITIONAL(HAS_HELP2MAN, [test x"$HELP2MAN" != x])
-AM_CONDITIONAL(HAS_MAN2HTML, [test x"$MAN2HTML" != x])
 
 dnl Checks for header files.
 AC_HEADER_DIRENT
@@ -72,7 +69,8 @@ XMLSEC_DEFINES=""
 dnl ==========================================================================
 dnl Specific setup for Aleksey's development environment: 
 dnl	- with debug
-dnl 	- with pedantic compiler flags
+dnl - with pedantic compiler flags
+dnl - with docs build
 dnl	- with static binaries
 dnl	- without dynamic xmlsec-crypto loading
 dnl ==========================================================================
@@ -82,12 +80,49 @@ if test "z$enable_development" = "zyes" ; then
     enable_debugging="yes"
     enable_pedantic="yes"
     enable_static_linking="yes"
+    enable_manpages="yes"
+    enable_docs="yes"
     enable_crypto_dl="no"
     AC_MSG_RESULT(yes)
 else
     AC_MSG_RESULT(no)
-fi    
+fi
 
+dnl ==========================================================================
+dnl Do we want to build manpages?
+dnl ==========================================================================
+AC_MSG_CHECKING(for man pages build) 
+AC_ARG_ENABLE(manpages,      [  --enable-manpages       man pages build (no)])
+if test "z$enable_manpages" = "zyes" ; then
+    AC_PATH_PROG(HELP2MAN, help2man)
+
+    AC_MSG_RESULT(yes)
+else
+    AC_MSG_RESULT(no)
+fi
+
+AM_CONDITIONAL(HAS_HELP2MAN, [test x"$HELP2MAN" != x])
+AM_CONDITIONAL(BUILD_MANPAGES, [test x"$HELP2MAN" != x])
+
+dnl ==========================================================================
+dnl Do we want to build docs?
+dnl ==========================================================================
+AC_MSG_CHECKING(for docs build) 
+AC_ARG_ENABLE(docs,          [  --enable-docs           docs build (no)])
+if test "z$enable_docs" = "zyes" ; then
+    AC_PATH_PROG(XSLTPROC, xsltproc)
+    AC_PATH_PROG(MAN2HTML, man2html)
+
+    AC_MSG_RESULT(yes)
+else
+    AC_MSG_RESULT(no)
+fi
+
+AM_CONDITIONAL(HAS_MAN2HTML, [test x"$MAN2HTML" != x])
+AM_CONDITIONAL(HAS_XSLTPROC, [test x"$XSLTPROC" != x])
+
+AM_CONDITIONAL(BUILD_MAN_DOCS, [test x"$PERL" != x && test x"$XSLTPROC" != x && test x"$MAN2HTML" != x])
+AM_CONDITIONAL(BUILD_API_DOCS, [test x"$PERL" != x && test x"$XSLTPROC" != x])
 
 dnl ==========================================================================
 dnl Perform host specific configuration
