--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,10 +1,10 @@
 NULL =
 
-XMLSEC1_MAN=$(top_builddir)/man/xmlsec1.1
-XMLSEC1_CONFIG_MAN=$(top_builddir)/man/xmlsec1-config.1
+XMLSEC1_MAN=$(builddir)/xmlsec1.1
+XMLSEC1_CONFIG_MAN=$(builddir)/xmlsec1-config.1
 
-XMLSEC1_MAN_SRC=$(top_srcdir)/man/xmlsec1.1
-XMLSEC1_CONFIG_MAN_SRC=$(top_srcdir)/man/xmlsec1-config.1
+XMLSEC1_MAN_SRC=$(srcdir)/xmlsec1.1
+XMLSEC1_CONFIG_MAN_SRC=$(srcdir)/xmlsec1-config.1
 
 man_MANS = \
 	$(XMLSEC1_MAN) \
@@ -18,22 +18,13 @@ EXTRA_DIST = \
 
 XMLSEC_PROGRAM=$(top_builddir)/apps/xmlsec1
 XMLSEC_CONFIG_PROGRAM=$(top_builddir)/xmlsec1-config
-XMLSEC_HTML=$(top_builddir)/docs/xmlsec-man.html
 
 all: $(man_MANS) $(XMLSEC_HTML)
 	
 clean:
 	@rm -rf $(man_MANS)
 
-if HAS_MAN2HTML
-$(XMLSEC_HTML): $(XMLSEC1_MAN)
-	$(MAN2HTML) $(XMLSEC1_MAN) | \
-		  grep -v '^Content-type: text/html' | \
-		  tr "[:cntrl:]" " " > \
-		  $(XMLSEC_HTML)
-endif
-
-if HAS_HELP2MAN
+if BUILD_MANPAGES
 $(XMLSEC1_MAN): $(XMLSEC_PROGRAM)
 	$(HELP2MAN) --help-option=--help-all --no-info \
 		  --name="sign, verify, encrypt and decrypt XML documents" \
@@ -42,10 +33,16 @@ $(XMLSEC1_MAN): $(XMLSEC_PROGRAM)
 		  $(XMLSEC_PROGRAM)
 else
 $(XMLSEC1_MAN):
-	$(CP) -u $(XMLSEC1_MAN_SRC) $(XMLSEC1_MAN)
+	@( \
+		echo "Copying xmlsec1 manpage ..."; \
+		if [ z"$(XMLSEC1_MAN_SRC)" != z"$(XMLSEC1_MAN)" ]; \
+		then \
+		   $(CP) -u $(XMLSEC1_MAN_SRC) $(XMLSEC1_MAN) ; \
+		fi \
+	)
 endif
 
-if HAS_HELP2MAN
+if BUILD_MANPAGES
 $(XMLSEC1_CONFIG_MAN): $(XMLSEC_CONFIG_PROGRAM)
 	$(HELP2MAN) --help-option=--help --no-info \
 		  --name="detail installed version of xmlsec library" \
@@ -54,7 +51,13 @@ $(XMLSEC1_CONFIG_MAN): $(XMLSEC_CONFIG_PROGRAM)
 		  $(XMLSEC_CONFIG_PROGRAM)
 else
 $(XMLSEC1_CONFIG_MAN):
-	$(CP) -u $(XMLSEC1_CONFIG_MAN_SRC) $(XMLSEC1_CONFIG_MAN)
+	@( \
+		echo "Copying xmlsec1-config manpage ..."; \
+		if [ z"$(XMLSEC1_CONFIG_MAN_SRC)" != z"$(XMLSEC1_CONFIG_MAN)" ]; \
+		then \
+		    $(CP) -u $(XMLSEC1_CONFIG_MAN_SRC) $(XMLSEC1_CONFIG_MAN) ; \
+		fi \
+	)
 endif
 
 $(XMLSEC_PROGRAM): 
