--- a/configure.in
+++ b/configure.in
@@ -112,6 +112,10 @@ AC_ARG_ENABLE(docs,          [  --enable-docs           docs build (no)])
 if test "z$enable_docs" = "zyes" ; then
     AC_PATH_PROG(XSLTPROC, xsltproc)
     AC_PATH_PROG(MAN2HTML, man2html)
+    AC_PATH_PROG(GTKDOC_MKHTML, gtkdoc-mkhtml)
+    AC_PATH_PROG(GTKDOC_MKTMPL, gtkdoc-mktmpl)
+    AC_PATH_PROG(GTKDOC_MKDB,   gtkdoc-mkdb)
+    AC_PATH_PROG(GTKDOC_SCAN,   gtkdoc-scan)
 
     AC_MSG_RESULT(yes)
 else
@@ -122,7 +126,7 @@ AM_CONDITIONAL(HAS_MAN2HTML, [test x"$MAN2HTML" != x])
 AM_CONDITIONAL(HAS_XSLTPROC, [test x"$XSLTPROC" != x])
 
 AM_CONDITIONAL(BUILD_MAN_DOCS, [test x"$PERL" != x && test x"$XSLTPROC" != x && test x"$MAN2HTML" != x])
-AM_CONDITIONAL(BUILD_API_DOCS, [test x"$PERL" != x && test x"$XSLTPROC" != x])
+AM_CONDITIONAL(BUILD_API_DOCS, [test x"$PERL" != x && test x"$XSLTPROC" != x && test x"$GTKDOC_MKHTML" != x && test x"$GTKDOC_MKTMPL" != x && test x"$GTKDOC_MKDB" != x && test x"$GTKDOC_SCAN" != x])
 
 dnl ==========================================================================
 dnl Perform host specific configuration
